--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "/flaskbooks" # the subpath of your site, e.g. /blog
-url: "https://flaskbooks.site" # the base hostname & protocol for your site, e.g. http://example.com
+url: "flaskbooks.site" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
