--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,25 @@
 title: Flask books
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Flaskbooks is dedicated to books and tutorials related to Flask Framework.
+  We publish our own e-books too and write reviews on the other books that are
+  beneficial for the Flask community.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://flaskbooks.site" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author: FlaskBooks # add your name
+author-img: flask.jpeg # add your photo
+about-author: A website dedicated to Flask books and tutorials. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github: # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
